# capsule

./: .gitignore  .pre-commit-config.yaml  README.md  install.sh  pyproject.toml
.github/workflows/: build.yml
examples/node/: devcontainer.json
examples/python/: devcontainer.json
examples/python-qt/: Dockerfile  devcontainer.json
src/capsule/: __init__.py  __main__.py  app.py  config.py  console.py  run_config.py  sources.py  templates.py
templates/: config.toml
templates/c/: capsule.toml  devcontainer.json
templates/cpp/: capsule.toml  devcontainer.json
templates/node/: capsule.toml
templates/python/: capsule.toml  devcontainer.json
templates/python-qt/: capsule.toml  devcontainer.json
templates/rust/: capsule.toml  devcontainer.json
tests/: test_app_add.py  test_app_errors.py  test_app_run.py  test_run_config.py  test_sources.py  test_templates.py
