[project]
name = "capsule"
version = "0.2.0"
description = "Manage devcontainer templates from the CLI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12",
    "rich>=13",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6",
]
dev = [
    "pytest>=8",
]

[project.scripts]
capsule = "capsule.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/capsule"]
