[project]
name = "capsule"
dynamic = ["version"]
description = "Manage devcontainer templates from the CLI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12",
    "rich>=15.0",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6",
]
dev = [
    "pytest>=8",
]

[project.scripts]
capsule = "capsule.__main__:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options = {write_to = "src/capsule/_version.py"}

[tool.hatch.build.targets.wheel]
packages = ["src/capsule"]
